Add PHP Generator code

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ public/bower_components
 config/db.json
 config/db.yml
 config/security.json
+test.php
 
 #   Compiled source   #
 #######################
